--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,11 @@
 doctype html
 html
   head
-    title UHH!!!! 
+    title UHH!!!!
+    link(rel="stylesheet" href="/almundo_app/static/css/main.css")
   body
     h1  HOLA!!!
+    firt-comp(hola="'Almundo'")
+    script(src="/almundo_app/static/vendor/angular/angular.min.js")
+    script(src="/almundo_app/static/js/app/app-pkg.js")
+    script(src="/almundo_app/static/js/components/components-pkg.js")
