--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,10 @@ html
   head
     title UHH!!!!
     link(rel="stylesheet" href="/almundo_app/static/css/main.css")
-  body
+    script(src="/almundo_app/static/vendor/angular/angular.min.js")
+  body(data-ng-app="App")
     h1  HOLA!!!
     firt-comp(hola="'Almundo'")
-    script(src="/almundo_app/static/vendor/angular/angular.min.js")
+
     script(src="/almundo_app/static/js/app/app-pkg.js")
     script(src="/almundo_app/static/js/components/components-pkg.js")
