--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,12 @@
 doctype html
 html
   head
-    title UHH!!!!
+    title Almundo
     link(rel="stylesheet" href="/almundo_app/static/css/main.css")
-    script(src="/almundo_app/static/vendor/angular/angular.min.js")
+    
   body(data-ng-app="App")
-    h1  HOLA!!!
-    firt-comp(hola="'Almundo'")
-
+    h1 Alumndo app
+    first-comp(name="Almundo")
+    script(src="/almundo_app/static/vendor/angular/angular.min.js")
     script(src="/almundo_app/static/js/app/app-pkg.js")
     script(src="/almundo_app/static/js/components/components-pkg.js")
